[package]
name = "fizzcaps_onchain"
version = "0.1.0"
description = "Atomic Fizz Caps — $CAPS token + real-world loot NFT claims"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fizzcaps_onchain"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = { version = "5.1.1", features = ["no-entrypoint"] }
solana-program = "~2.0"
